--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
             </div>
         </div>
         <div class="row">
-            <div id="diffApp" class="col-sm-4">
+            <div id="todo" class="col-sm-4">
+                    <TestComponent />
             </div>
         </div>
         <div class="row">
