Updated the index.php to be centered.

--- a/src/index.html
+++ b/src/index.html
@@ -7,25 +7,25 @@
     </head>
     <body class="container">
         <div class="row">
-            <div id="notApp" class="col-sm-4">
+            <div id="notApp" class="col-sm-8 col-sm-push-4">
                 <h2>Hi from index.html</h2>
             </div>
         </div>
         <div class="row">
-            <div id="app" class="col-sm-4">
+            <div id="app" class="col-sm-8 col-sm-push-4">
             </div>
         </div>
         <div class="row">
-            <div id="todo" class="col-sm-4">
+            <div id="todo" class="col-sm-8 col-sm-push-4">
                     <TestComponent />
             </div>
         </div>
         <div class="row">
-            <div id="greeting" class="col-sm-4">
+            <div id="greeting" class="col-sm-8 col-sm-push-4">
             </div>
         </div>
         <div class="row">
-            <div id="clock" class="col-sm-4">
+            <div id="clock" class="col-sm-8 col-sm-push-4">
             </div>
         </div>
         <script src="main.js"></script>
