Updated the index layout

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,13 @@
             Counter Project
         </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body class="container">
+        <div id="header">
+        </div>
         <div class="row">
-            <div id="notApp" class="col-sm-8 col-sm-push-4">
-                <h2>Hi from index.html</h2>
+            <div id="clock" class="col-sm-8 col-sm-push-4">
             </div>
         </div>
         <div class="row">
@@ -22,10 +24,6 @@
         </div>
         <div class="row">
             <div id="greeting" class="col-sm-8 col-sm-push-4">
-            </div>
-        </div>
-        <div class="row">
-            <div id="clock" class="col-sm-8 col-sm-push-4">
             </div>
         </div>
         <script src="main.js"></script>
