Updated the files

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
         <div id="header">
         </div>
         <div class="row">
+            <div id="navbar"></div>
+        </div>
+        <div class="row">
             <div id="clock" class="col-sm-8 col-sm-push-4">
             </div>
         </div>
